--- a/css/styles.css
+++ b/css/styles.css
@@ -1,56 +1,84 @@
+html body {
+    margin:0px;
+    border:0px;
+}
+
 #nav1 {
     background-color: turquoise;
     color: black;
+    font-size: small;
+    margin: 0em;
+    padding-left: 10px;
 }
 
 h1 {
-    background-color: blue;
+    color:cornsilk;
+    text-transform: uppercase;
+    background-color: rgb(27, 27, 87);
+    font-size:50px;
+    height: auto;
+    width:  auto;
+    margin:0em;
+    padding-left: 10px;
+
 }
 
 
 #bloque1 {
     display:grid;
     position:absolute;
+    top:100px;
+    left:200px;
 }
 
 
 #fbatman{
     position:absolute;
     padding-left: 5px;
+
 }
 
 #batman {
     position:relative;
-    left:90px;
-    top: -50px;
+    left:95px;
+    top: 130px;
+    border-radius: 60px;
+    z-index:1;
 }
 
 #fglobal {
     position:absolute;
     padding-top: 191px;
+    border-radius: 40px;
+
 }
 
 span#title {
     font-weight: bolder;
+    text-transform: uppercase;
     font-size: x-large;
     position:relative;
-    left:110px;
-    bottom:-100px;
+    left:100px;
+    bottom:-150px;
 
 }
 
 button {
+    background-color: midnightblue;
+    border-radius: 10px;
     position:relative;
+    display:inline-block;
     left: 115px;
     bottom:-150px;
-    z-index: relative;
+    text-decoration: none;
+    color:mintcream;
 }
 
-span #textogrupo {
+span #textogrupo1 {
     position:relative;
     left:50px;
-    top:100px;
-    border: 1px solid black;
+    top:150px;
+    border: 0px solid black;
     width: 200px;
     height:150px;
     text-align: justify;
@@ -60,7 +88,11 @@ span #textogrupo {
 
 footer {
     color:cornsilk;
-    background-color: darkblue;
+    background-color: rgb(27, 27, 87);
+    height: auto;
+    width:auto;
+    position:relative;
+    bottom: -571px;
     text-align: center;
     font-weight: bold;
 }
