--- a/css/styles.css
+++ b/css/styles.css
@@ -53,13 +53,20 @@ h1 {
 
 }
 
+.material-icons {
+    color:darkred;
+    z-index:1;
+    margin:0px;
+    padding:0px;
+}
+
 span#title {
     font-weight: bolder;
     text-transform: uppercase;
     font-size: x-large;
     position:relative;
     left:100px;
-    bottom:-150px;
+    bottom:-130px;
 
 }
 
@@ -69,7 +76,7 @@ button {
     position:relative;
     display:inline-block;
     left: 115px;
-    bottom:-150px;
+    bottom:-130px;
     text-decoration: none;
     color:mintcream;
 }
@@ -77,7 +84,7 @@ button {
 span #textogrupo1 {
     position:relative;
     left:50px;
-    top:150px;
+    top:140px;
     border: 0px solid black;
     width: 200px;
     height:150px;
