--- a/css/styles.css
+++ b/css/styles.css
@@ -11,34 +11,19 @@ html body {
     min-height:calc(100vh - 92.22);
 }*/
 
-#nav1 {
-    background-color: turquoise;
-    color: black;
-    font-size: small;
-    margin: 0em;
-    padding-left: 10px;
-}
 
-h1 {
-    color:cornsilk;
-    text-transform: uppercase;
-    background-color: rgb(27, 27, 87);
-    font-size:50px;
-    height: auto;
-    width:  auto;
-    margin:0em;
-    padding-left: 10px;
-
-}
 
 
 #bloque1 {
     display:grid;
     position:absolute;
-    top:100px;
+    top:200px;
     left:200px;
 }
 
+/*.fas fa-heart {
+    z-index:auto;
+}*/
 
 #fbatman{
     position:absolute;
@@ -51,7 +36,7 @@ h1 {
     left:95px;
     top: 130px;
     border-radius: 60px;
-    z-index:1;
+    z-index:2;
 }
 
 #fglobal {
@@ -61,20 +46,13 @@ h1 {
 
 }
 
-.material-icons {
-    color:darkred;
-    z-index:1;
-    margin:0px;
-    padding:0px;
-}
-
 span#title {
     font-weight: bolder;
     text-transform: uppercase;
     font-size: x-large;
     position:relative;
     left:100px;
-    bottom:-130px;
+    bottom:-137px;
 
 }
 
@@ -84,7 +62,7 @@ button {
     position:relative;
     display:inline-block;
     left: 115px;
-    bottom:-130px;
+    bottom:-115px;
     text-decoration: none;
     color:mintcream;
 }
@@ -98,8 +76,34 @@ span #textogrupo1 {
     width: 200px;
     height:150px;
     text-align: justify;
+}
 
+#heart {
+    position:relative;
+    left:35px;
+    top: 30px;
+    z-index:1;
+}
 
+#nav1 {
+    background-color: turquoise;
+    color: black;
+    font-size: small;
+    margin: 0em;
+    padding-left: 10px;
+    position:sticky;
+}
+
+h1 {
+    color:cornsilk;
+    text-transform: uppercase;
+    background-color: rgb(27, 27, 87);
+    font-size:50px;
+    height: auto;
+    width:  auto;
+    margin:0em;
+    padding-left: 10px;
+    position:sticky;
 }
 
 footer {
@@ -107,7 +111,7 @@ footer {
     background-color: rgb(27, 27, 87);
     height: 20px;
     position:relative;
-    bottom: -567px;
+    bottom: -800px;
     width:auto;
     text-align: center;
     font-weight:normal;
