--- a/css/styles.css
+++ b/css/styles.css
@@ -85,17 +85,6 @@ span #textogrupo1 {
     z-index:1;
 }
 
-#nav1 {
-    background-color: turquoise;
-    color: black;
-    font-size: small;
-    margin: 0px;
-    padding-left: 10px;
-    width:100%;
-    /*position: sticky;
-    top:0px;*/
-}
-
 footer {
     color:cornsilk;
     background-color: rgb(27, 27, 87);
@@ -107,6 +96,18 @@ footer {
     font-weight:normal;
 }
 
+#nav1 {
+    background-color: turquoise;
+    color: black;
+    font-size: small;
+    margin: 0px;
+    padding-left: 10px;
+    width:100%;
+    position: sticky;
+    top:0px;
+    z-index:10px;
+}
+
 h1 {
     color:cornsilk;
     text-transform: uppercase;
@@ -114,15 +115,16 @@ h1 {
     font-size:50px;
     margin:0px;
     padding-left: 10px;
-    /*position: sticky;
-    top:0px;*/
+    position: sticky;
+    top:0px;
+    z-index:10px;
 }
 
-.header {
+/*.headerr {
     background-color: aqua;
     position: sticky;
     top: 0px;
     z-index:10;
-}
+}*/
 
 
